[gd_scene load_steps=39 format=2]

[ext_resource path="res://actors/physics/PlatformActor.gd" type="Script" id=1]
[ext_resource path="res://actors/enemies/tomato/Brain.gd" type="Script" id=2]
[ext_resource path="res://actors/combat/Health.tscn" type="PackedScene" id=3]
[ext_resource path="res://actors/enemies/tomato/TomatoCharacter.tscn" type="PackedScene" id=4]
[ext_resource path="res://actors/enemies/CutoutCharacter.gd" type="Script" id=5]
[ext_resource path="res://actors/physics/StateMachine.tscn" type="PackedScene" id=6]
[ext_resource path="res://actors/physics/State.tscn" type="PackedScene" id=7]
[ext_resource path="res://actors/enemies/tomato/states/Idle.gd" type="Script" id=8]
[ext_resource path="res://actors/physics/Move.tscn" type="PackedScene" id=9]
[ext_resource path="res://actors/physics/Gravity.tscn" type="PackedScene" id=10]
[ext_resource path="res://actors/Command.gd" type="Script" id=11]
[ext_resource path="res://actors/enemies/tomato/states/Walk.gd" type="Script" id=12]
[ext_resource path="res://actors/physics/Stop.tscn" type="PackedScene" id=13]
[ext_resource path="res://actors/enemies/tomato/states/Chase.gd" type="Script" id=14]
[ext_resource path="res://actors/enemies/tomato/states/Stun.gd" type="Script" id=15]
[ext_resource path="res://actors/enemies/tomato/states/Squash.gd" type="Script" id=16]
[ext_resource path="res://actors/combat/CombateStateMachine.tscn" type="PackedScene" id=17]
[ext_resource path="res://actors/physics/State.gd" type="Script" id=18]
[ext_resource path="res://actors/combat/Attack.tscn" type="PackedScene" id=19]
[ext_resource path="res://actors/combat/HitBox.tscn" type="PackedScene" id=20]
[ext_resource path="res://actors/enemies/tomato/TomatoSquashHit.tres" type="Resource" id=21]
[ext_resource path="res://actors/combat/HurtBox.tscn" type="PackedScene" id=22]
[ext_resource path="res://actors/enemies/tomato/ChasingSightArea.tscn" type="PackedScene" id=23]
[ext_resource path="res://objects/Spawner.gd" type="Script" id=24]
[ext_resource path="res://actors/enemies/tomato/TomatoExplodingParticles.tscn" type="PackedScene" id=25]
[ext_resource path="res://actors/enemies/Score.tscn" type="PackedScene" id=26]
[ext_resource path="res://interface/HealthBar.tscn" type="PackedScene" id=27]
[ext_resource path="res://interface/ScoreLabelSpawner.gd" type="Script" id=28]
[ext_resource path="res://actors/ActorProvider.tscn" type="PackedScene" id=30]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 40 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 140, 60 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 50, 50 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 320, 190 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 70, 50 )

[sub_resource type="CircleShape2D" id=6]
radius = 321.403

[sub_resource type="Animation" id=7]
length = 1.5
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath("CombatStateMachine/SquashState/Attack/HitBox")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.1, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "enable"
}, {
"args": [  ],
"method": "disable"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("MovementStateMachine")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 1.15, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [ "Move" ],
"method": "execute"
}, {
"args": [ "Stop" ],
"method": "execute"
}, {
"args": [ "Idle" ],
"method": "change_state_to"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HurtBox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -180 ), Vector2( 0, -180 ), Vector2( 0, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 0.164706, 0.164706, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 0.956863, 0.956863, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Tomato" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 1 )

[node name="Score" parent="." instance=ExtResource( 26 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -40 )
shape = SubResource( 1 )

[node name="Brain" type="Node" parent="."]
script = ExtResource( 2 )
state_machine_path = NodePath("../MovementStateMachine")

[node name="IdleTime" type="Timer" parent="Brain"]
one_shot = true
autostart = true

[node name="WanderTime" type="Timer" parent="Brain"]
one_shot = true

[node name="StunTime" type="Timer" parent="Brain"]
wait_time = 0.25
one_shot = true

[node name="Health" parent="Brain" instance=ExtResource( 3 )]
max_health = 35

[node name="Character" parent="." instance=ExtResource( 4 )]
script = ExtResource( 5 )

[node name="ParticlesSpawner" type="Position2D" parent="Character/Pivot/Body" index="5"]
script = ExtResource( 24 )
spawnling_scene = ExtResource( 25 )
container = "Level"

[node name="ScoreLabelSpawner" type="Position2D" parent="Character/Pivot/Body" index="6"]
script = ExtResource( 28 )

[node name="Score" parent="Character/Pivot/Body/ScoreLabelSpawner" instance=ExtResource( 26 )]
value = 270

[node name="MovementActorProvider" parent="." instance=ExtResource( 30 )]
actor_path = NodePath("..")
receiver_path = NodePath("../MovementStateMachine")

[node name="MovementStateMachine" parent="." instance=ExtResource( 6 )]

[node name="IdleState" parent="MovementStateMachine" instance=ExtResource( 7 )]
script = ExtResource( 8 )

[node name="Move" parent="MovementStateMachine/IdleState" instance=ExtResource( 9 )]
speed = 300.0

[node name="Gravity" parent="MovementStateMachine/IdleState" instance=ExtResource( 10 )]
actor_path = NodePath("../../..")

[node name="Chase" type="Node" parent="MovementStateMachine/IdleState"]
script = ExtResource( 11 )

[node name="WalkState" parent="MovementStateMachine" instance=ExtResource( 7 )]
script = ExtResource( 12 )

[node name="Move" parent="MovementStateMachine/WalkState" instance=ExtResource( 9 )]
speed = 300.0

[node name="Stop" parent="MovementStateMachine/WalkState" instance=ExtResource( 13 )]

[node name="Gravity" parent="MovementStateMachine/WalkState" instance=ExtResource( 10 )]
actor_path = NodePath("../../..")

[node name="Chase" type="Node" parent="MovementStateMachine/WalkState"]
script = ExtResource( 11 )

[node name="ChaseState" parent="MovementStateMachine" instance=ExtResource( 7 )]
script = ExtResource( 14 )

[node name="Move" parent="MovementStateMachine/ChaseState" instance=ExtResource( 9 )]
speed = 600.0

[node name="Stop" parent="MovementStateMachine/ChaseState" instance=ExtResource( 13 )]

[node name="Squash" type="Node" parent="MovementStateMachine/ChaseState"]
script = ExtResource( 11 )

[node name="Gravity" parent="MovementStateMachine/ChaseState" instance=ExtResource( 10 )]
actor_path = NodePath("../../..")

[node name="StunState" parent="MovementStateMachine" instance=ExtResource( 7 )]
script = ExtResource( 15 )

[node name="SquashState" parent="MovementStateMachine" instance=ExtResource( 7 )]
script = ExtResource( 16 )

[node name="Stop" parent="MovementStateMachine/SquashState" instance=ExtResource( 13 )]

[node name="Move" parent="MovementStateMachine/SquashState" instance=ExtResource( 9 )]
speed = 1200.0

[node name="CombatActorProvider" parent="." instance=ExtResource( 30 )]
actor_path = NodePath("..")
receiver_path = NodePath("../CombatStateMachine")

[node name="CombatStateMachine" parent="." instance=ExtResource( 17 )]

[node name="IdleState" type="Node2D" parent="CombatStateMachine"]
script = ExtResource( 18 )

[node name="WalkState" type="Node2D" parent="CombatStateMachine"]
script = ExtResource( 18 )

[node name="ChaseState" type="Node2D" parent="CombatStateMachine"]
script = ExtResource( 18 )

[node name="StunState" type="Node2D" parent="CombatStateMachine"]
script = ExtResource( 18 )

[node name="SquashState" type="Node2D" parent="CombatStateMachine"]
script = ExtResource( 18 )

[node name="Attack" parent="CombatStateMachine/SquashState" instance=ExtResource( 19 )]
position = Vector2( 0, -120 )

[node name="HitBox" parent="CombatStateMachine/SquashState/Attack" instance=ExtResource( 20 )]
hit = ExtResource( 21 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CombatStateMachine/SquashState/Attack/HitBox"]
position = Vector2( 0, 58.6733 )
shape = SubResource( 2 )
disabled = true

[node name="HurtBox" parent="." groups=[
"enemy",
] instance=ExtResource( 22 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, -50 )
shape = SubResource( 3 )

[node name="OuterAttackRange" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 8

[node name="Shape" type="CollisionShape2D" parent="OuterAttackRange"]
position = Vector2( 0, -190 )
shape = SubResource( 4 )

[node name="InnerAttackRange" type="Area2D" parent="."]
position = Vector2( 0, -50 )
monitorable = false
collision_layer = 0
collision_mask = 8

[node name="Shape" type="CollisionShape2D" parent="InnerAttackRange"]
shape = SubResource( 5 )

[node name="ChasingSightArea" parent="." instance=ExtResource( 23 )]
position = Vector2( 0, -60 )

[node name="Shape" parent="ChasingSightArea" index="0"]
shape = SubResource( 6 )

[node name="AttackAnimator" type="AnimationPlayer" parent="."]
anims/squash = SubResource( 7 )

[node name="HealthBar" parent="." instance=ExtResource( 27 )]
visible = false
margin_left = -90.0
margin_right = 90.0
margin_bottom = 30.0
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
health_path = NodePath("../Brain/Health")

[node name="Timer" type="Timer" parent="HealthBar"]
one_shot = true
[connection signal="timeout" from="Brain/IdleTime" to="Brain" method="_on_IdleTime_timeout"]
[connection signal="timeout" from="Brain/WanderTime" to="Brain" method="_on_WanderTime_timeout"]
[connection signal="timeout" from="Brain/StunTime" to="Brain" method="_on_StunTime_timeout"]
[connection signal="died" from="Brain/Health" to="Character/Pivot/Body/ScoreLabelSpawner/Score" method="score"]
[connection signal="died" from="Brain/Health" to="Character/Pivot/Body/ParticlesSpawner" method="spawn"]
[connection signal="died" from="Brain/Health" to="Character/Pivot/Body/ScoreLabelSpawner" method="spawn"]
[connection signal="state_changed" from="MovementStateMachine" to="Brain" method="_on_StateMachine_state_changed"]
[connection signal="state_changed" from="MovementStateMachine" to="CombatStateMachine" method="change_state_to"]
[connection signal="entered" from="MovementStateMachine/IdleState" to="Character" method="play" binds= [ "idle" ]]
[connection signal="entered" from="MovementStateMachine/WalkState" to="Character" method="play" binds= [ "walk" ]]
[connection signal="entered" from="MovementStateMachine/ChaseState" to="Character" method="play" binds= [ "chase" ]]
[connection signal="entered" from="MovementStateMachine/StunState" to="Character" method="play" binds= [ "hurt" ]]
[connection signal="state_changed" from="CombatStateMachine" to="Brain" method="_on_CombatStateMachine_state_changed"]
[connection signal="started" from="CombatStateMachine/SquashState/Attack" to="AttackAnimator" method="play" binds= [ "squash" ]]
[connection signal="damage_inflicted" from="HurtBox" to="Brain/Health" method="damage"]
[connection signal="hit_landed" from="HurtBox" to="Brain" method="_on_HurtBox_hit_landed"]
[connection signal="hurt" from="HurtBox" to="MovementStateMachine" method="change_state_to" binds= [ "Stun" ]]
[connection signal="hurt" from="HurtBox" to="HealthBar" method="show"]
[connection signal="area_exited" from="OuterAttackRange" to="Brain" method="_on_OuterAttackRange_area_exited"]
[connection signal="area_entered" from="InnerAttackRange" to="Brain" method="_on_InnerAttackRange_area_entered"]
[connection signal="chase_direction_changed" from="ChasingSightArea" to="Brain" method="_on_ChasingSightArea_chase_direction_changed"]
[connection signal="spotted" from="ChasingSightArea" to="Brain" method="_on_ChasingSightArea_spotted"]
[connection signal="animation_finished" from="AttackAnimator" to="Brain" method="_on_AttackAnimator_animation_finished"]
[connection signal="draw" from="HealthBar" to="HealthBar/Timer" method="start"]
[connection signal="timeout" from="HealthBar/Timer" to="HealthBar" method="hide"]

[editable path="Character"]

[editable path="ChasingSightArea"]
